--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,12 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        maven { url "http://objectbox.net/beta-repo/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath "io.objectbox:objectbox-gradle-plugin:1.0.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +18,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
+        maven { url "http://objectbox.net/beta-repo/" }
     }
 }
 
