--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.11'
     repositories {
-        jcenter()
         google()
-        maven { url "http://objectbox.net/beta-repo/" }
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath "io.objectbox:objectbox-gradle-plugin:1.0.1"
+        classpath 'com.android.tools.build:gradle:3.4.0-alpha09'
+        classpath "io.objectbox:objectbox-gradle-plugin:2.3.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,9 +18,8 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
-        maven { url "http://objectbox.net/beta-repo/" }
+        jcenter()
     }
 }
 
