--- a/tools/versions.gradle
+++ b/tools/versions.gradle
@@ -1,30 +1,25 @@
 ext.versions = [
 
-        androidJetpackVersion: '1.1.0-rc01',
+        androidJetpackVersion: '1.2.0-alpha01',
         androidJetpackGridlayoutVersion: '1.0.0',
-        androidJetpackConstraintlayoutVersion: '2.0.0-beta2',
-        androidJetpackLifecycleruntimeVersion: '2.2.0-alpha02',
+        androidJetpackConstraintlayoutVersion: '2.0.0-beta4',
+        androidJetpackLifecycleVersion: '2.2.0-rc03',
         androidJetpackMultidexVersion: '2.0.1',
-        androidJetpackViewmodelkotlinVersion: '2.2.0-alpha02',
-        androidJetpackPagingVersion: '2.1.0',
-        androidJetpackRecyclerviewselectionVersion: '1.1.0-alpha06',
-        androidJetpackLifecycleVersion: '2.2.0-alpha02',
-        androidJetpackLifecyclecompilerVersion: '2.2.0-alpha02',
-        androidJetpackLivedataVersion: '2.2.0-alpha02',
+        androidJetpackPagingVersion: '2.1.1',
+        androidJetpackRecyclerviewselectionVersion: '1.1.0-beta01',
         androidJetpackCardviewVersion: '1.0.0',
-        androidJetpackDesignVersion: '1.1.0-alpha08',
-        androidJetpackRecyclerviewVersion: '1.1.0-beta02',
-        androidJetpackViewmodelVersion: '2.2.0-alpha02',
-        daggerVersion: '2.24',
+        androidJetpackDesignVersion: '1.2.0-alpha03',
+        androidJetpackRecyclerviewVersion: '1.2.0-alpha01',
+        daggerVersion: '2.25.4',
         adalVersion: '0.1.20',
-        firebaseVersion: '17.0.1',
+        firebaseVersion: '17.2.1',
         firebaseCrashlyticsVersion: '2.10.1',
-        glideVersion: '4.9.0',
-        retrofitVersion: '2.6.1',
+        glideVersion: '4.10.0',
+        retrofitVersion: '2.7.1',
         retrofitLoggingVersion: '4.1.0',
-        retrofitJacksonVersion: '2.10.0.pr1',
+        retrofitJacksonVersion: '2.10.2',
         threetenabpVersion: '1.2.1',
-        permissionsDispatcherVersion: '4.5.0',
+        permissionsDispatcherVersion: '4.6.0',
 
         // ANDROID CONFIGS
         compileSdk: 29,
