--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0-alpha08'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "io.objectbox:objectbox-gradle-plugin:2.5.0"
-        classpath 'com.google.gms:google-services:4.3.0'
+        classpath 'com.google.gms:google-services:4.3.3'
         classpath "com.github.ben-manes:gradle-versions-plugin:0.27.0"
 
         // NOTE: Do not place your application dependencies here; they belong
